Fix hidden submit task button on safari

--- a/frontend/src/components/TaskCreator/index.module.scss
+++ b/frontend/src/components/TaskCreator/index.module.scss
@@ -136,7 +136,7 @@
 }
 
 .SubmitNewTask {
-  width: 42px;
+  width: 60px;
   padding-left: 10px;
   background: white;
   border: none;
@@ -146,7 +146,7 @@
 }
 
 .GroupSubmitNewTask {
-  width: 42px;
+  width: 60px;
   padding-left: 13px;
   height: 50px;
   background: white;
